# litergss-everywhere

./: .gitignore  .gitmodules  BUILD_MODES.md  CLAUDE.md  CMakeLists.txt  FAT_LIBRARY_INTEGRATION.md  Package.swift  QUICK_REFERENCE.md  README.md  configure  docker-compose.yml
.github/workflows/: build.yml
cmake/: core
cmake/docker/: GenerateDockerfile.cmake  ParseDependencies.cmake  PreloadDeps.cmake
cmake/litergss-app/: expected_symbols.cmake
cmake/litergss-app/dependencies/: embedded-ruby-vm.cmake  flac.cmake  freetype.cmake  libogg.cmake  libvorbis.cmake  litecgss.cmake  litergss2.cmake  openal-soft.cmake  patchelf.cmake  ruby-for-android.cmake  ruby-psdk-vm-snapshot.cmake  ruby-sfml-audio.cmake  sfml.cmake
cmake/litergss-app/dependencies/files/: dummy.c  extension-init.c  litergss2-CMakeLists.txt  litergss_surface_jni.c  ruby-sfml-audio-CMakeLists.txt
cmake/litergss-app/files/: extension-init.c
cmake/litergss-app/patches/litergss2/android/: prefix_with_lib.patch  series
cmake/litergss-app/patches/ruby-sfml-audio/android/: prefix_with_lib.patch  series
cmake/litergss-app/patches/ruby-sfml-audio/static/: series
cmake/litergss-app/patches/sfml/android/: dont_load_from_inputstream_android.patch  series  static-libraries.patch
cmake/litergss-app/patches/sfml/common/: add-custom-lib-path.patch  fix-config-dependencies-cross-platform.patch  series
cmake/litergss-app/patches/sfml/ios/: detect-ios-platform.patch  fix-config-dependencies-opengl.patch  fix-gles-typedefs.patch  fix-shader-glhandle-cast.patch  series
cmake/litergss-app/scripts/: verify_symbols.cmake
cmake/litergss-app/tests/: smoke_test.c
docker/: Dockerfile
docs/: BUILDING.md  INTEGRATION.md  KMP_INTEGRATION_GUIDE.md
examples/: README.md  litergss_ruby_example.c
examples/android-integration/: README.md  settings.gradle.kts
examples/android-integration/app/: build.gradle.kts
examples/android-integration/app/src/main/: AndroidManifest.xml
examples/android-integration/app/src/main/kotlin/com/example/rgss/: MainActivity.kt
examples/android-integration/app/src/main/res/layout/: activity_main.xml
examples/android-integration/app/src/main/res/values/: strings.xml  themes.xml
examples/android-native-activity/: gradle.properties  local.properties  settings.gradle.kts
examples/android-native-activity/app/: build.gradle.kts
examples/android-native-activity/app/src/main/: AndroidManifest.xml
examples/android-native-activity/app/src/main/assets/: render_demo.rb
examples/android-native-activity/app/src/main/kotlin/com/example/rgss/nativeactivity/: LauncherActivity.kt
examples/android-native-activity/app/src/main/res/values/: strings.xml  themes.xml
examples/ios-integration/: README.md  build.gradle.kts  settings.gradle.kts
examples/simple_app/: .gitignore  CMakeLists.txt  README.md  main.c
kotlin/com/scorbutics/litergss/: NativeSurface.kt
scripts/: publish-kmp-android.sh  publish-kmp-desktop.sh  publish-kmp-ios.sh  publish-kmp-linux-native.sh  validate-aar.sh
toolchain-params/: arm64-ios-device-toolchain.params  arm64-ios-simulator-toolchain.params  arm64-linux-toolchain.params  arm64-macos-toolchain.params  arm64-v8a-android-toolchain.params  x86_64-android-toolchain.params  x86_64-linux-toolchain.params
